Pinning the semantic kernel version

--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -194,7 +194,7 @@ The key tasks are as follows:
 - To add the Semantic Kernel NuGet package, you can run the following command from the command line, in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file.
 
   ```powershell
-  dotnet add package Microsoft.SemanticKernel
+  dotnet add package Microsoft.SemanticKernel --version 1.20.0
   ```
 
 - In order to tag a method in the `DatabaseService.cs` file, you will need to include the `Microsoft.SemanticKernel` and `System.ComponentModel` namespaces at the top of the file, along with the other **using** statements.
