Adding additions user secrets for Cosmos DB database and container names

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
@@ -63,6 +63,8 @@ The key tasks are as follows:
 
   ```sh
   dotnet user-secrets set "CosmosDB:ConnectionString" "{YOUR_CONNECTION_STRING}"
+  dotnet user-secrets set "CosmosDB:DatabaseName" "ContosoSuites"
+  dotnet user-secrets set "CosmosDB:MaintenanceRequestsContainerName" "MaintenanceRequests"
   dotnet user-secrets set "AzureOpenAI:EmbeddingDeploymentName" "text-embedding-ada-002"
   ```
 
