Removing Improve SDK compatibility option from API

--- a/docs/06_add_genai_gateway_capabilities_with_api_management/0601.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/0601.md
@@ -19,7 +19,6 @@ The key tasks are as follows:
 
 1. Import your Azure OpenAI Service resource as an API in Azure API Management.
    - Assign a display name of "Azure OpenAI API" and a name of "azure-openai-api."
-   - Include "/opanai" at the end of the API URL, to improve SDK compatibility.
 2. Define a token limit policy to protect the API from overuse and to control Azure OpenAI costs.
    - Use a TPM value of 500 per client IP address.
    - Factor estimated prompt tokens into rate-limiting.
@@ -67,7 +66,7 @@ The key tasks are as follows:
     - **Name**: This value with be automatically populated with "azure-openai-api," based on the display name you entered. You can edit this, but you should accept the generated value for this exercise.
     - **Description**: This is optional, so you can leave it blank or enter a description, such as "Azure OpenAI API."
     - **Base URL**: This will be automatically created based on the **Name** of your API. Accept the generated value.
-    - **Improve SDK compatibility**: Check this box. It will result in "/openai" being added to the end of the **Base URL** value.
+    - **Improve SDK compatibility**: Leave this box unchecked.
     - **Products**: Leave this empty.
   - Select **Next: Policies** and on the **Policies** tab, define the token limit and emitting policies.
   - To create a token limit policy, check the **Manage token consumption** box and set the following:
