Updating instructions to used pinned version of Semantic Kernel

--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -19,11 +19,7 @@ The key tasks are as follows:
 
 1. Add three local secrets using `dotnet user-secrets`. They should be named `AzureOpenAI:DeploymentName`, `AzureOpenAI:Endpoint`, and `AzureOpenAI:ApiKey`, and these secret names are case-sensitive.
 2. The `DatabaseService` class and `IDatabaseService` interface have three methods associated with them. Contoso Suites would like to add two more methods. One will be called `GetBookingsMissingHotelRooms()` and will return all bookings that do not have associated hotel rooms. The second will be called `GetBookingsWithMultipleHotelRooms()` and will return all bookings with more than one hotel room. Neither method should take an input parameter, and you will not need to add explicit endpoints for these.
-3. Add the Semantic Kernel NuGet package to the Web API project.
-
-    {: .important }
-    > You will need a version of Semantic Kernel that supports Azure.AI.OpenAI version 2. Semantic Kernel 1.17.2 only supports version 1 of the library, so you will need to use 1.18 or later. As of the time of writing, [the latest version of Semantic Kernel](https://www.nuget.org/packages/Microsoft.SemanticKernel/) will be sufficient.
-
+3. Add the Semantic Kernel version 1.20.0 NuGet package to the Web API project.
 4. Tag each of the methods in the `DatabaseService` class as kernel functions and provide a description for each method and input parameter.
 5. The `AppConfig.cs` file contains a simple configuration class. Update the `Program.cs` file to use this configuration class to build out a configuration. Add in any user secrets associated with the (implicit) `Program` class as well as environment variables, and then validate the configuration.
 6. In `Program.cs`, add a singleton of type `Microsoft.SemanticKernel.Kernel`. It should create an `IKernelBuilder` and then add Azure OpenAI chat completion, using the deployment name, endpoint, and API key from your configuration. It should also add as a plugin everything in the `DatabaseService` class.
