Fixing the referenced streamlit page name

--- a/docs/05_enhance_api_with_semantic_kernel/0502.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0502.md
@@ -22,14 +22,14 @@ The key tasks are as follows:
    - The maintenance request plugin provides kernel functions capable of creating a new maintenance request and saving it to the `MaintenanceRequests` container in Azure Cosmos DB.
    - The database plugin (in the `DatabaseService`) provides a kernel function for looking up hotel information from Azure SQL database.
 3. Enable the `/MaintenanceCopilotChat` endpoint on the API.
-4. Configure the **Chat Copilot** page as a conversational app in the Streamlit dashboard. Ensure calls to the `MaintenanceCopilotChat` API endpoint have a long enough timeout, as some database calls might take longer than the default of 10 seconds.
-5. Use the **Chat Copilot** page to interact with your agent, using the following prompts to have it generate a new maintenance request and save it to Azure Cosmos DB.
-6. Test the agent via the Streamlit **Chat Copilot** page using the following conversational prompts:
+4. Configure the **Copilot Chat** page as a conversational app in the Streamlit dashboard. Ensure calls to the `MaintenanceCopilotChat` API endpoint have a long enough timeout, as some database calls might take longer than the default of 10 seconds.
+5. Use the **Copilot Chat** page to interact with your agent, using the following prompts to have it generate a new maintenance request and save it to Azure Cosmos DB.
+6. Test the agent via the Streamlit **Copilot Chat** page using the following conversational prompts:
    - First, send in this message about a customer reported issue: "A customer is reporting an issue in room 205 at the Grand Regency. The microwave is not working."
    - Next, ask it, "Did it get saved to the database?"
    - Now, ask it, "Did you do that before I asked, or after?"
 7. Improve the agent's behavior by provide it with a persona. By providing instructions on how to plan the creation of a request and saving it to the database, you can guide how the agent interacts with users. The prompt you provide should ensuring it has all the required information from the customer service agent, and that it requests permission before performing any consequential actions, such as saving the request to the database. It should also inform users the request has been saved and that hotel maintenance will be addressing the issue as soon as possible.
-8. Test the agent via the **Chat Copilot** page in the dashboard noting the differences in responses with the persona provided. Use the following conversational prompts to interact with the agent.
+8. Test the agent via the **Copilot Chat** page in the dashboard noting the differences in responses with the persona provided. Use the following conversational prompts to interact with the agent.
     - Enter, "Can you help me create a maintenance request?"
       - Notice that the agent is now prompting you to provide additional details, such as the hotel, room number, and a description of the issue.
     - Next, send the following message: "The customer mentioned they were at the regency. Can you provide me with the exact name of that hotel?"
@@ -45,7 +45,7 @@ The key tasks are as follows:
 - You have enabled the `/MaintenanceCopilotChat` endpoint to the API, which sends user messages to the agent and returns the agent's response.
 - You have configured the maintenance request and database plugins for your agent to use when generating new maintenance requests and retrieving hotel information.
 - You have provided your agent with a prompt to define its persona.
-- You have created a conversation app using the **Chat Copilot** page in the Streamlit Dashboard.
+- You have created a conversation app using the **Copilot Chat** page in the Streamlit Dashboard.
 - You can engage the agent via the Steamlit dashboard and through a natural language conversation, have it create and save a new maintenance request.
 
 ## Learning Resources
@@ -192,7 +192,7 @@ The key tasks are as follows:
 
     Make sure to remove the `throw new NotImplementedException();` line, or you will get an error when that line is hit.
 
-- To configure the **Chat Copilot** page as a conversational app in the Streamlit dashboard:
+- To configure the **Copilot Chat** page as a conversational app in the Streamlit dashboard:
   - Complete `Exercise 5 Task 2 TODO #11` by setting `response` equal to the response from a POST request to the Copilot endpoint. The timeout should be set to 60 seconds or longer. The call should look like:
 
     ```python
@@ -220,8 +220,8 @@ The key tasks are as follows:
 
   - Save the file.
 
-- To test the agent via the Streamlit **Chat Copilot** page using the following conversational prompts:
-  - Run the API locally by opening a new terminal window in Visual Studio code, navigate to the `src\ContosoSuitesWebAPI` directory and start the API using the following command:
+- To test the agent via the Streamlit **Copilot Chat** page:
+  - Run the API locally by opening a new terminal window in Visual Studio code, navigating to the `src\ContosoSuitesWebAPI` directory and starting the API using the following command:
 
     ```bash
     dotnet run
