Minor updates to 0601

--- a/docs/06_add_genai_gateway_capabilities_with_api_management/0601.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/0601.md
@@ -19,6 +19,7 @@ The key tasks are as follows:
 
 1. Import your Azure OpenAI Service resource as an API in Azure API Management.
    - Assign a display name of "Azure OpenAI API" and a name of "azure-openai-api."
+   - Ensure APIM accesses your Azure OpenAI service using a managed identity.
 2. Define a token limit policy to protect the API from overuse and to control Azure OpenAI costs.
    - Use a TPM value of 500 per client IP address.
    - Factor estimated prompt tokens into rate-limiting.
@@ -83,7 +84,10 @@ The key tasks are as follows:
 
         ![Screenshot of the configuration specified for the Track token usage policy.](../../media/Solution/0601-apim-emit-token-policy.png)
 
-  - Select **Review + create**, then select **Create**.
+  - Select **Review + create**, then select **Create**. Importing your Azure OpenAI service using the above method automatically enables managed identity access to your Azure OpenAI resource from APIM.
+
+    ![Screenshot of the enhanced security message displayed when creating the API in APIM, detailing the automatic use and setup of APIM's managed identity with Azure OpenAI.](../../media/Solution/0601-apim-enhanced-security-using-managed-identity.png)
+
   - The finished policies should look like the following in the policy editor:
 
     ```xml
@@ -167,6 +171,7 @@ The key tasks are as follows:
     ```kusto
     customMetrics
     | where timestamp > ago(1h)
+    | where name in ('Completion Tokens', 'Prompt Tokens', 'Total Tokens')
     | extend
         ItemId = substring(itemId, 24),
         ApiId = tostring(customDimensions['API ID']),
@@ -184,7 +189,8 @@ The key tasks are as follows:
 
     ```kusto
     customMetrics
-    | where timestamp > ago(4h)
+    | where timestamp > ago(1h)
+    | where name in ('Completion Tokens', 'Prompt Tokens', 'Total Tokens')
     | extend ItemId = substring(itemId, 24)
     | summarize TokenCount = sum(value) by ItemId, name
     | order by ItemId
